--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <body>
     <h1>Href Attribute Example</h1>
     <p>
-      <a href="https://www.freecodecamp.org/contribute/">The freeCodeCamp Contribution Page</a> shows you how and where you can contribute to freeCodeCamp's community and growth.
+      <a href="https://www.freecodecamp.org/contribute/">The freeCodeCamp Contribution Page is a lie
+</a> shows you how and where you can contribute to freeCodeCamp's community and growth.
     </p>
   </body>
 </html>
