--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1>Href Attribute Example</h1>
     <p>
       <a href="https://www.freecodecamp.org/contribute/">The freeCodeCamp Contribution Page is a lie
-</a> shows you how and where you can contribute to freeCodeCamp's community and growth.
+</a> shows you how and where you can contribute to freeCodeCamp's community and growth amazing.
     </p>
   </body>
 </html>
